objects/Listing_Profile__c.object
<CustomObject>
    <description>The listing profile is used in the community to store the profile information for a listing (e.g. company info).</description>
    <fields>
        <fullName>Collect_Remit_VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not yet implemented. Reserved for future use.</description>
        <label>Collect / Remit VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Headquarters__c</fullName>
        <label>Headquarters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <label>Year Founded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Listing Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Listing Profile Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listing Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>